--- a/DotnetRuntimeBootstrapper.AppHost.Cli/DotnetRuntimeBootstrapper.AppHost.Cli.csproj
+++ b/DotnetRuntimeBootstrapper.AppHost.Cli/DotnetRuntimeBootstrapper.AppHost.Cli.csproj
@@ -12,9 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="IsExternalInit" Version="1.0.3" PrivateAssets="all" />
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="all" />
-    <PackageReference Include="QuickJson" Version="1.0.0" PrivateAssets="all" />
+    <PackageReference Include="PolyShim" Version="1.1.0" PrivateAssets="all" />
+    <PackageReference Include="QuickJson" Version="1.0.2" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
