--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,19 @@
 name: main
 
-on: [push, pull_request]
+on:
+  workflow_dispatch:
+    inputs:
+      package-version:
+        type: string
+        description: Package version
+        required: false
+      deploy:
+        type: boolean
+        description: Deploy package
+        required: false
+        default: false
+  push:
+  pull_request:
 
 jobs:
   main:
@@ -8,6 +21,9 @@ jobs:
     with:
       windows-only: true
       dotnet-version: 7.0.x
+      package-version: ${{ inputs.package-version }}
+      # Deploy only on tags by default, unless deploy is explicitly requested
+      deploy-on-tags-only: ${{ !(github.event_name == 'workflow_dispatch' && inputs.deploy) }}
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }}
