--- a/DotnetRuntimeBootstrapper.AppHost.Cli/DotnetRuntimeBootstrapper.AppHost.Cli.csproj
+++ b/DotnetRuntimeBootstrapper.AppHost.Cli/DotnetRuntimeBootstrapper.AppHost.Cli.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net35</TargetFramework>
@@ -7,12 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="../DotnetRuntimeBootstrapper.AppHost.Core/**/*.cs" Exclude="**/bin/**/*.cs;**/obj/**/*.cs" Visible="false" />
+    <Compile
+      Include="../DotnetRuntimeBootstrapper.AppHost.Core/**/*.cs"
+      Exclude="**/bin/**/*.cs;**/obj/**/*.cs"
+      Visible="false"
+    />
     <None Include="../DotnetRuntimeBootstrapper.AppHost.Core/*.config" Visible="false" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CSharpier.MsBuild" Version="0.30.6" PrivateAssets="all" />
+    <PackageReference Include="CSharpier.MsBuild" Version="1.2.1" PrivateAssets="all" />
     <PackageReference Include="PolyShim" Version="1.15.0" PrivateAssets="all" />
     <PackageReference Include="QuickJson" Version="1.1.0" PrivateAssets="all" />
   </ItemGroup>
@@ -20,5 +23,4 @@
   <ItemGroup>
     <Reference Include="System.Management" />
   </ItemGroup>
-
 </Project>
