--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -11,4 +11,24 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <!-- Disable nullability warnings on older frameworks because there is no nullability info for BCL -->
+  <PropertyGroup Condition="!$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'netstandard2.1'))">
+    <Nullable>annotations</Nullable>
+  </PropertyGroup>
+
+  <!-- Disable trim and AOT analyzers on older frameworks as they're not compatible with newer language features -->
+  <PropertyGroup Condition="!$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net10.0'))">
+    <EnableTrimAnalyzer>false</EnableTrimAnalyzer>
+    <EnableAotAnalyzer>false</EnableAotAnalyzer>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <Authors>$(Company)</Authors>
+    <Description>.NET runtime bootstrapper for Windows applications</Description>
+    <PackageTags>windows desktop dotnet runtime install bootstrapper</PackageTags>
+    <PackageProjectUrl>https://github.com/Tyrrrz/DotnetRuntimeBootstrapper</PackageProjectUrl>
+    <PackageReleaseNotes>https://github.com/Tyrrrz/DotnetRuntimeBootstrapper/releases</PackageReleaseNotes>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+  </PropertyGroup>
+
 </Project>
